set up proposal cover page according to FOA and last year's style (header/footer)

--- a/info.tex
+++ b/info.tex
@@ -3,10 +3,16 @@
 \def\JobTitle{Associate Scientist}
 \def\PhoneLast{xxxx}
 \def\EmailFirst{janedoe}
-\def\YearPhD{2015}
-\def\NumPrev{0}
+\def\ProgramOffice{DOE}
 \def\TopicArea{Physics}
+\def\ProgramContact{John Snow}
+\def\YearPhD{2015}
 \def\ExtensionReq{No}
+\def\UnivTenureTrack{Not at a University}
+\def\PITenure{No}
+\def\NumPrev{0}
+\def\PreproposalNum{PRE-0000000000}
+\def\PecaseEligible{Yes}
 
 % unlikely to change
 \def\PhoneFirst{630.840}
