--- a/coverpage.tex
+++ b/coverpage.tex
@@ -1,23 +1,59 @@
 \input{info}
 
-\title{\color{NALblue} \bf{\large{\Title}\vspace{-1.5\baselineskip}}}
-\author{\Name, \JobTitle\\
-Fermi National Accelerator Laboratory\\
-\PhoneFirst.\PhoneLast, \EmailFirst\EmailLast\\
-Year Doctorate Awarded: \YearPhD\\
-Number of Times Previously Applied: \NumPrev\\
-Topic Area: \TopicArea\\
-Eligibility Extension Requested: \ExtensionReq\\
-FOA Number:  \FOANumber
-}
-\date{\vspace{-0.5\baselineskip}
-\begin{minipage}{\textwidth}
-The proposed research idea fits within the scope of SC-funded programs at Fermilab.\\
-\begin{minipage}{0.7\textwidth}
-\vspace{4\baselineskip}
+% from p. 69 of SC_FOA_0002563.pdf
+\begin{table}
+\centering
+\vspace{2\baselineskip}
+% raggedright prevents hyphenation
+\begin{tabular}{|>{\raggedright}p{0.4\textwidth}|p{0.55\textwidth}|}
+\hline
+Project Title: & \Title\\
+\hline
+Applicant/Institution: & Fermi National Accelerator Laboratory\\
+\hline
+Street Address/City/State/Zip: & Kirk and Pine St. / Batavia, IL / 60510\\
+\hline
+Postal Address: & P.O. Box 500 / Batavia, IL / 60510\\
+\hline
+Principal Investigator (PI) name: & \Name\\
+\hline
+Position title for PI: & \JobTitle\\
+\hline
+PI telephone number, email: & \PhoneFirst.\PhoneLast, \EmailFirst\EmailLast\\
+\hline
+Administrative Point of Contact name, telephone number, email: & Hema Ramamoorthi, 630.840.6723, hema@fnal.gov\\
+\hline
+FOA Number: & \FOANumber\\
+\hline
+DOE/SC Program Office: & \ProgramOffice\\
+\hline
+Topic Area: & \TopicArea\\
+\hline
+DOE/SC Program Office Technical Contact: & \ProgramContact\\
+\hline
+Year Doctorate Awarded: & \YearPhD\\
+\hline
+Eligibility Extension Included in Approved Pre-application: & \ExtensionReq\\
+\hline
+If at a University, is the PI in a tenure-track appointment?: & \UnivTenureTrack\\
+\hline
+Does the PI have tenure: & \PITenure\\
+\hline
+Number of Times Previously Applied: & \NumPrev\\
+\hline
+PAMS Preproposal (Pre-application) Number: & \PreproposalNum\\
+\hline
+PECASE Eligible: & \PecaseEligible\\
+\hline
+Proposal Contains Biosketch in Appendix 1: & Yes\\
+\hline
+Proposal Contains Data Management Plan in Appendix 6: & Yes\\
+\hline
+\end{tabular}
+\end{table}
+
+\noindent The proposed research idea fits within the scope of SC-funded programs at Fermilab.\\
+\vspace{4\baselineskip}\\
 \noindent\rule{\textwidth}{1pt}\\
 Nigel Lockyer \hfill (Date)\\
 Director, Fermi National Accelerator Laboratory
-\end{minipage}
-\end{minipage}
-}
