--- a/style.tex
+++ b/style.tex
@@ -12,7 +12,7 @@
 % FNAL header setup
 \definecolor{NALblue}{RGB}{0,76,151}
 \usepackage{fancyhdr}
-\pagestyle{fancy}
+\pagestyle{fancy}{
 \fancyhf{}
 \rhead{\includegraphics[scale=0.15]{figures/FNAL-Logo-NAL-Blue.png}}
 \rfoot{\thepage}
@@ -20,3 +20,4 @@
 \renewcommand{\headrulewidth}{2pt}
 \renewcommand{\headrule}{\vskip-0.5\baselineskip\hbox to\headwidth{%
     \color{NALblue}\leaders\hrule height \headrulewidth\hfill}}
+}
