--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,7 @@
 
 \input{packages}
 
-\input{style}
+\input{base/style}
 
 \begin{document}
 % remove body header from first page
@@ -32,7 +32,7 @@
 % header/footer just on cover page
 \AddToShipoutPicture*{\BackgroundPic}
 
-\input{coverpage}
+\input{base/coverpage}
 \clearpage
 \pagenumbering{arabic}
 
