--- a/info.tex
+++ b/info.tex
@@ -13,8 +13,8 @@
 \def\NumPrev{0}
 \def\PreproposalNum{PRE-0000000000}
 \def\PecaseEligible{Yes}
-\def\BioSketchFile{figures/biosketch.pdf}
-\def\SupportFile{figures/cps.pdf}
+\def\BioSketchFile{base/figures/biosketch.pdf}
+\def\SupportFile{base/figures/cps.pdf}
 
 % unlikely to change
 \def\PhoneFirst{630.840}
