--- a/support.tex
+++ b/support.tex
@@ -1,13 +1,1 @@
-\newlength{\supportoffset}
-\setlength{\supportoffset}{\headheight}
-\addtolength{\supportoffset}{\baselineskip}
-\includepdf[pages=1, pagecommand=\section{Current and Pending Support}\label{sec:support}, offset=0 -\supportoffset]{\SupportFile}
-\includepdf[pages=2-, pagecommand={}, offset=0 -\headheight]{\SupportFile}
-
-\clearpage
-
-\subsection{Description of Research (Current Support)}
-
-SC\_FOA\_0002563 (pp. 101) specifies that the PI should provide a brief description of the research being performed for each activity listed under Current and Pending Support.
-
-\clearpage
+% in case any additional information is needed
