--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
-\usepackage{xcolor}
+\usepackage[table]{xcolor}
 \usepackage{fullpage}
 \usepackage{titlesec}
 \usepackage{array}
@@ -37,8 +37,9 @@
 \pagenumbering{arabic}
 
 \thispagestyle{fancy}
-% needs to be defined here or gets overwritten by \thispagestyle{empty} above
+% lengths need to be defined here or gets overwritten by \thispagestyle{empty} above
 \setlength{\headheight}{19.7478pt}
+\setlength{\headsep}{4pt}
 \newlength{\nsfoffset}
 \setlength{\nsfoffset}{\headheight}
 \addtolength{\nsfoffset}{\baselineskip}
