keep table on first page

--- a/base/coverpage.tex
+++ b/base/coverpage.tex
@@ -1,7 +1,7 @@
 \input{info}
 
 % from p. 69 of SC_FOA_0002563.pdf
-\begin{table}
+\begin{table}[!h]
 \centering
 \vspace{2\baselineskip}
 % raggedright prevents hyphenation
