fix header for overleaf/newer texlive distros

--- a/base/style.tex
+++ b/base/style.tex
@@ -12,11 +12,10 @@
 % FNAL header setup
 \definecolor{NALblue}{RGB}{0,76,151}
 \usepackage{fancyhdr}
-\pagestyle{fancy}{
+\pagestyle{fancy}
 \fancyhf{}
 \rhead{\includegraphics[scale=0.15]{base/figures/FNAL-Logo-NAL-Blue.png}}
 \rfoot{\thepage}
 \renewcommand{\headrulewidth}{2pt}
 \renewcommand{\headrule}{\vskip-0.5\baselineskip\hbox to\headwidth{%
     \color{NALblue}\leaders\hrule height \headrulewidth\hfill}}
-}
