updates for new FOA

--- a/base/coverpage.tex
+++ b/base/coverpage.tex
@@ -15,11 +15,7 @@ Street Address/City/State/Zip: & Kirk and Pine St. / Batavia, IL / 60510\\
 \hline
 Postal Address: & P.O. Box 500 / Batavia, IL / 60510\\
 \hline
-Principal Investigator (PI) name: & \Name\\
-\hline
-Position title for PI: & \JobTitle\\
-\hline
-PI telephone number, email: & \PhoneFirst.\PhoneLast, \EmailFirst\EmailLast\\
+Lead PI name, telephone number, email: & \Name, \PhoneFirst.\PhoneLast, \EmailFirst\EmailLast\\
 \hline
 Administrative Point of Contact name, telephone number, email: & Hema Ramamoorthi, 630.840.6723, hema@fnal.gov\\
 \hline
@@ -27,7 +23,7 @@ FOA Number: & \FOANumber\\
 \hline
 DOE/SC Program Office: & \ProgramOffice\\
 \hline
-Topic Area: & \TopicArea\\
+Topical Area: & \TopicArea\\
 \hline
 DOE/SC Program Office Technical Contact: & \ProgramContact\\
 \hline
@@ -55,5 +51,5 @@ Proposal Contains Data Management Plan in Appendix 6: & Yes\\
 \noindent The proposed research idea fits within the scope of SC-funded programs at Fermilab.\\
 \vspace{4\baselineskip}\\
 \noindent\rule{\textwidth}{1pt}\\
-Nigel Lockyer \hfill (Date)\\
+Lia Merminga \hfill (Date)\\
 Director, Fermi National Accelerator Laboratory
