updates for 2023 FOA

--- a/base/coverpage.tex
+++ b/base/coverpage.tex
@@ -1,6 +1,6 @@
 \input{info}
 
-% from p. 69 of SC_FOA_0002563.pdf
+% from p. 76 of DE-FOA-0003176.pdf
 \begin{table}[!h]
 \centering
 \vspace{2\baselineskip}
@@ -27,8 +27,6 @@ Topical Area: & \TopicArea\\
 \hline
 DOE/SC Program Office Technical Contact: & \ProgramContact\\
 \hline
-PAMS Pre-application tracking number: & \PreproposalNum\\
-\hline
 Year Doctorate Awarded: & \YearPhD\\
 \hline
 Eligibility Extension Included in Approved Pre-application: & \ExtensionReq\\
@@ -39,13 +37,13 @@ Does the PI have tenure: & \PITenure\\
 \hline
 Number of Times Previously Applied: & \NumPrev\\
 \hline
-PAMS Preproposal (Pre-application) Number: & \PreproposalNum\\
+PAMS Pre-application Number: & \PreproposalNum\\
 \hline
 PECASE Eligible: & \PecaseEligible\\
 \hline
-Proposal Contains Biosketch in Appendix 1: & Yes\\
+Proposal Contains Data Management Plan in Appendix 4: & Yes\\
 \hline
-Proposal Contains Data Management Plan in Appendix 6: & Yes\\
+Proposal Contains PIER Plan in Appendix 5: & Yes\\
 \hline
 \end{tabular}
 \end{table}
