--- a/main.tex
+++ b/main.tex
@@ -65,11 +65,11 @@
 \section{Promoting Inclusive and Equitable Research (PIER) Plan}\label{sec:pierplan}
 \input{pierplan}
 
-\section{Recruitment and Retention of Students and Early-Stage Investigators}\label{sec:retention}
-\input{retention}
-
 \section{Other Attachments}\label{sec:other}
 \input{other}
+
+\section{DOE/NNSA National Laboratory \texorpdfstring{``Renewals''}{"Renewals"} of Ongoing Activity}\label{sec:labrenewal}
+\input{labrenewal}
 
 \end{document}
 
