--- a/base/coverpage.tex
+++ b/base/coverpage.tex
@@ -11,7 +11,7 @@ Project Title: & \Title\\
 \hline
 Applicant/Institution: & Fermi National Accelerator Laboratory\\
 \hline
-Street Address/City/State/Zip: & Kirk and Pine St. / Batavia, IL / 60510\\
+Street Address/City/State/Zip: & Kirk Rd. and Pine St. / Batavia, IL / 60510\\
 \hline
 Postal Address: & P.O. Box 500 / Batavia, IL / 60510\\
 \hline
