option for table of contents; separate pages for appendices with page limits

--- a/info.tex
+++ b/info.tex
@@ -12,6 +12,8 @@
 \def\NumPrev{0}
 \def\PreproposalNum{PRE-0000000000}
 \def\PecaseEligible{Yes}
+% uncomment below to enable table of contents
+%\def\tocflag{}
 
 % unlikely to change
 \def\PhoneFirst{630.840}
