update point of contact on cover page

--- a/base/coverpage.tex
+++ b/base/coverpage.tex
@@ -17,7 +17,7 @@ Postal Address: & P.O. Box 500 / Batavia, IL / 60510\\
 \hline
 Lead PI name, telephone number, email: & \Name, \PhoneFirst.\PhoneLast, \EmailFirst\EmailLast\\
 \hline
-Administrative Point of Contact name, telephone number, email: & Hema Ramamoorthi, 630.840.6723, hema@fnal.gov\\
+Administrative Point of Contact name, telephone number, email: & Cheryl Stetter, 630.840.4420, cheryl@fnal.gov\\
 \hline
 FOA Number: & \FOANumber\\
 \hline
