update required sections and cover page for 2025

--- a/base/coverpage.tex
+++ b/base/coverpage.tex
@@ -19,17 +19,15 @@ Lead PI name, telephone number, email: & \Name, \PhoneFirst.\PhoneLast, \EmailFi
 \hline
 Administrative Point of Contact name, telephone number, email: & Cheryl Stetter, 630.840.4420, cheryl@fnal.gov\\
 \hline
-FOA Number: & \FOANumber\\
+NOFO Number: & \FOANumber\\
 \hline
 DOE/SC Program Office: & \ProgramOffice\\
 \hline
-Topical Area: & \TopicArea\\
+Research Area: & \TopicArea\\
 \hline
 DOE/SC Program Office Technical Contact: & \ProgramContact\\
 \hline
 Year Doctorate Awarded: & \YearPhD\\
-\hline
-Eligibility Extension Included in Approved Pre-application: & \ExtensionReq\\
 \hline
 If at a University, is the PI in a tenure-track appointment?: & \UnivTenureTrack\\
 \hline
@@ -39,11 +37,7 @@ Number of Times Previously Applied: & \NumPrev\\
 \hline
 PAMS Pre-application Number: & \PreproposalNum\\
 \hline
-PECASE Eligible: & \PecaseEligible\\
-\hline
 Proposal Contains Data Management Plan in Appendix 4: & Yes\\
-\hline
-Proposal Contains PIER Plan in Appendix 5: & Yes\\
 \hline
 \end{tabular}
 \end{table}
@@ -51,5 +45,5 @@ Proposal Contains PIER Plan in Appendix 5: & Yes\\
 \noindent The proposed research idea fits within the scope of SC-funded programs at Fermilab.\\
 \vspace{4\baselineskip}\\
 \noindent\rule{\textwidth}{1pt}\\
-Lia Merminga \hfill (Date)\\
-Director, Fermi National Accelerator Laboratory
+Young-Kee Kim \hfill (Date)\\
+(Interim) Director, Fermi National Accelerator Laboratory
