--- a/base/style.tex
+++ b/base/style.tex
@@ -5,7 +5,7 @@
 \parbox[b][\paperheight]{\paperwidth}{%
 \vfill
 \centering
-\includegraphics[width=0.95\paperwidth,height=0.95\paperheight,keepaspectratio]{base/figures/Cover_page_v3_blank.png}%
+\includegraphics[width=1.0\paperwidth,height=1.0\paperheight,keepaspectratio]{base/figures/cover_page_blank.pdf}%
 \vfill
 }}}
 
